# EDRep

./: ApproximateSoftmax.ipynb  Community detection.ipynb  Demo.ipynb  EDRep.html  EDRep.ipynb  EDRep_env.yml  README.md  Real graph pre-processing.ipynb  Real graphs tests.ipynb  Test the approximation.ipynb  Text processing.ipynb  Zest.ipynb  _config.yml  _toc.yml  compare_optim.ipynb  genindex.html  intro.html  intro.md  node_emb.html  node_emb.ipynb  p2vec.py  p2vecNS.py  pyproject.toml  requirements.txt  search.html  searchindex.js  steup.cfg  text.html
.ipynb_checkpoints/: Community detection-checkpoint.ipynb  Real graphs tests-checkpoint.ipynb  Test the approximation-checkpoint.ipynb
EDRep/: EDRep.py  __init__.py  node_embedding.py
EDRep.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Notebooks/: Community detection.ipynb  Data_completion.ipynb  Real graphs tests.ipynb  Test the approximation.ipynb  Text processing.ipynb
Notebooks/.ipynb_checkpoints/: Community detection-checkpoint.ipynb  Real graphs tests-checkpoint.ipynb  Text processing-checkpoint.ipynb
Package/: DCSBM.py  PWord2Vec.py  dcsbm.py  eder.py  edr.py  est.py  node_embedding.py  p2vec.py  word_embedding.py
_build/.doctrees/: EDRep.doctree  GDynaDist.doctree  Zest.doctree  environment.pickle  intro.doctree  node_emb.doctree
_build/html/: .buildinfo  (+3 more)
_sources/: intro.md
dataset/: amazon.csv  amazon_label.csv  dblp_label.csv  livejournal_label.csv  youtube_label.csv
src/: EstimateZ.py  dcsbm.py
tests/: test_EDRep.py
utils/: EDRep.py  dcsbm.py  node_embedding.py  word_embedding.py
(+5 files in other folders)
